fixed album grid spacing

--- a/styles/portfolio-style.css
+++ b/styles/portfolio-style.css
@@ -25,18 +25,18 @@
 /*************************************/
 
 .section-album {
-  padding: 12.8rem 9.6rem;
+  padding: 12.8rem;
+  text-align: center;
 }
 
 .album-title {
   text-align: center;
-  margin-bottom: 9.6rem;
   font-size: 6.8rem;
+  margin-bottom: 9.6rem;
 }
 
 .section-album .grid {
-  row-gap: 3.8rem;
-  column-gap: 3.8rem;
+  display: inline-grid;
   margin-bottom: 9.6rem;
 }
 
@@ -45,12 +45,11 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  margin-bottom: 4rem;
 }
 
 .album-img {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 .album-tag {
