--- a/styles/queries.css
+++ b/styles/queries.css
@@ -19,6 +19,10 @@
     font-size: 1.8rem;
     padding: 0;
   }
+
+  .section-album {
+    padding: 9.6rem 2rem;
+  }
 }
 
 /* *********************** */
@@ -112,10 +116,10 @@
     transform: translateX(0);
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name='close-outline'] {
     display: block;
   }
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
     display: none;
   }
 
@@ -286,10 +290,6 @@
 
   .portfolio-card:last-child {
     margin-bottom: 0;
-  }
-
-  .section-album {
-    padding: 9.6rem 2rem;
   }
 }
 
